--- a/fire_house-master/pubspec.yaml
+++ b/fire_house-master/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^0.11.1+12
   path_provider: ^0.4.1
   url_launcher: ^5.1.1
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
